--- a/eyepetizer_home/src/main/AndroidManifest.xml
+++ b/eyepetizer_home/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhewen.eyepetizer_home">
-    <application
-        android:name=".MyApplication">
 
+    <application>
+        <activity android:name=".ui.activity.HomeActivity"
+            android:exported="false" />
     </application>
-
 </manifest>
